# lifecare-medical-center-chatbot

Backend/: main.py
Backend/app/agent/: graph.py  nodes.py  state.py
Backend/app/models/: appointment.py
Backend/app/prompts/: __init__.py  normal_chat_prompts.py  rag_prompt.py  sql_answer_prompt.py
Backend/app/utils/: __init__.py  schema_utils.py
Backend/app/validations/: __init__.py  sql_query.py  user_question.py
Fruntend/: package-lock.json  package.json
Fruntend/public/: index.html
Fruntend/src/: App.css
Fruntend/src/Chat Interface/components/: ChatBotImage.css  ChatBotImage.jsx
backend/: pyproject.toml
backend/app/agent/: llm.py
backend/app/db/: DBConnection.py  __init__.py
backend/app/models/: __init__.py  doctor.py  patient.py  test.py
backend/app/prompts/: router_prompts.py  sql_prompts.py
backend/app/rag/: embedding_model.py  pdf_retriever.py
backend/app/validations/: sql_result.py
frontend/src/: App.js
frontend/src/Chat Interface/: ChatInterface.jsx
frontend/src/Chat Interface/components/: ChatBotIcon.jsx  ChatForm.jsx
