[project]
name = "new-folder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chroma>=0.2.0",
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "langchain>=1.0.7",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.3",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.3",
    "pydentic>=0.0.1.dev3",
    "pymysql>=1.1.2",
    "pypdf>=6.3.0",
    "uvicorn>=0.38.0",
]
